--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Telit FN990A40</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/Telit5G/images/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/Telit5G/images/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/Telit5G/images/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Telit5G/images/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/Telit5G/images/favicon/site.webmanifest" />
 </head>
 <body>
-    <h1>Telit FN990A40 as our COTsS UE</h1>
+    <h1>Telit FN990A40 5G module as COTS UE</h1>
 
-    <a href="https://techship.com/product/telit-fn990a40-5g-sub6-m2/?variant=005">Purchase link</a>
+    <a href="https://techship.com/product/telit-fn990a40-5g-sub6-m2/?variant=005" target="_blank">Purchase link</a>
 
     <br>
     Script to initiate the connection:
@@ -43,32 +48,34 @@
     <span class="command">sleep</span> <span class="argument">2</span>
     <span class="command">sudo</span> <span class="command">udhcpc</span> <span class="argument">-q</span> <span class="argument">-f</span> <span class="argument">-i</span> <span class="variable">$wwan_interface</span></pre>
     
+    <br>
     Script to stop the connection:
     <pre>
     <span class="command">sudo</span> <span class="command">qmicli</span> <span class="argument">-d</span> <span class="string">/dev/cdc-wdm1</span> <span class="argument">--dms-set-operating-mode=</span><span class="string">"low-power"</span>
     <span class="command">sudo</span> <span class="command">qmi-network</span> <span class="string">/dev/cdc-wdm1</span> <span class="argument">stop</span></pre>
 
     <h2>Results:</h2>
-    <h3>Stable</h3>
+    Used <a href="https://github.com/aayamrajshakya/Parser-Plotter/blob/main/parser.py" target="_blank">parser</a> and <a href="https://github.com/aayamrajshakya/Parser-Plotter/blob/main/plotter.py" target="_blank">plotter</a> to process the raw iPerf log files.
+    <h3>Stable:</h3>
 
     <div class="slider" id="stableSlider">
         <button class="prev" onclick="moveSlide(-1, 'stableSlider')">&#10094;</button>
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/stable(10).png" alt="10M">
+                    <img src="/Telit5G/images/graph/stable(10).png" alt="10M">
                     <figcaption class="caption">Graph #1: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/stable(100).png" alt="100M">
+                    <img src="/Telit5G/images/graph/stable(100).png" alt="100M">
                     <figcaption class="caption">Graph #2: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/stable(115).png" alt="115M">
+                    <img src="/Telit5G/images/graph/stable(115).png" alt="115M">
                     <figcaption class="caption">Graph #3: 115M</figcaption>
                 </figure>
             </div>
@@ -83,43 +90,43 @@
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(5).png" alt="5M">
+                    <img src="/Telit5G/images/graph/mobile(5).png" alt="5M">
                     <figcaption class="caption">Graph #1: 5M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(10).png" alt="10M">
+                    <img src="/Telit5G/images/graph/mobile(10).png" alt="10M">
                     <figcaption class="caption">Graph #2: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(20).png" alt="20M">
+                    <img src="/Telit5G/images/graph/mobile(20).png" alt="20M">
                     <figcaption class="caption">Graph #3: 20M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(50).png" alt="50M">
+                    <img src="/Telit5G/images/graph/mobile(50).png" alt="50M">
                     <figcaption class="caption">Graph #4: 50M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(75).png" alt="75M">
+                    <img src="/Telit5G/images/graph/mobile(75).png" alt="75M">
                     <figcaption class="caption">Graph #5: 75M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(100).png" alt="100M">
+                    <img src="/Telit5G/images/graph/mobile(100).png" alt="100M">
                     <figcaption class="caption">Graph #6: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/mobile(115).png" alt="115M">
+                    <img src="/Telit5G/images/graph/mobile(115).png" alt="115M">
                     <figcaption class="caption">Graph #7: 115M</figcaption>
                 </figure>
             </div>
@@ -141,5 +148,11 @@
             slides.style.transform = `translateX(-${slider.currentSlide * 100}%)`;
         }
     </script>
+    <script>
+    document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
+    <footer>
+    <p>&copy; 2024 Aayam Raj Shakya.</p>
+</footer>
 </body>
 </html>
