added bash scripts

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Telit FN990A40</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/Telit5G/images/favicon/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/Telit5G/images/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/Telit5G/images/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/Telit5G/images/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="/Telit5G/images/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/Telit5G/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/Telit5G/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/Telit5G/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/Telit5G/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/Telit5G/favicon/site.webmanifest" />
 </head>
 <body>
     <h1>Telit FN990A40 5G module as COTS UE</h1>
@@ -63,19 +63,19 @@
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/stable(10).png" alt="10M">
+                    <img src="/Telit5G/graph/stable(10).png" alt="10M">
                     <figcaption class="caption">Graph #1: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/stable(100).png" alt="100M">
+                    <img src="/Telit5G/graph/stable(100).png" alt="100M">
                     <figcaption class="caption">Graph #2: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/stable(115).png" alt="115M">
+                    <img src="/Telit5G/graph/stable(115).png" alt="115M">
                     <figcaption class="caption">Graph #3: 115M</figcaption>
                 </figure>
             </div>
@@ -90,43 +90,43 @@
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(5).png" alt="5M">
+                    <img src="/Telit5G/graph/mobile(5).png" alt="5M">
                     <figcaption class="caption">Graph #1: 5M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(10).png" alt="10M">
+                    <img src="/Telit5G/graph/mobile(10).png" alt="10M">
                     <figcaption class="caption">Graph #2: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(20).png" alt="20M">
+                    <img src="/Telit5G/graph/mobile(20).png" alt="20M">
                     <figcaption class="caption">Graph #3: 20M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(50).png" alt="50M">
+                    <img src="/Telit5G/graph/mobile(50).png" alt="50M">
                     <figcaption class="caption">Graph #4: 50M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(75).png" alt="75M">
+                    <img src="/Telit5G/graph/mobile(75).png" alt="75M">
                     <figcaption class="caption">Graph #5: 75M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(100).png" alt="100M">
+                    <img src="/Telit5G/graph/mobile(100).png" alt="100M">
                     <figcaption class="caption">Graph #6: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/images/graph/mobile(115).png" alt="115M">
+                    <img src="/Telit5G/graph/mobile(115).png" alt="115M">
                     <figcaption class="caption">Graph #7: 115M</figcaption>
                 </figure>
             </div>
