--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing Telit FN990A40</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/Telit5G/favicon/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="/Telit5G/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/Telit5G/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/Telit5G/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="/Telit5G/favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/TelitFN990A40/favicon/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/TelitFN990A40/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/TelitFN990A40/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/TelitFN990A40/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/TelitFN990A40/favicon/site.webmanifest" />
 </head>
 <body>
     <h1>Telit FN990A40 5G module as COTS UE</h1>
@@ -18,7 +18,7 @@
 
     <br>
     <br>
-    Script to initiate the connection (<a href="https://github.com/aayamrajshakya/Telit5G/blob/main/start_modem.sh" target="_blank">start_modem.sh</a>):
+    Script to initiate the connection (<a href="https://github.com/aayamrajshakya/TelitFN990A40/blob/main/start_modem.sh" target="_blank">start_modem.sh</a>):
     <pre>
 #!/bin/bash
 
@@ -80,7 +80,7 @@ while true; do
 done
 </pre>
     <br>
-    Script to stop the connection (<a href="https://github.com/aayamrajshakya/Telit5G/blob/main/stop_modem.sh" target="_blank">stop_modem.sh</a>):
+    Script to stop the connection (<a href="https://github.com/aayamrajshakya/TelitFN990A40/blob/main/stop_modem.sh" target="_blank">stop_modem.sh</a>):
 <pre>
 #!/bin/bash
 
@@ -102,19 +102,19 @@ sudo qmi-network "$device" stop
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/stable(10).png" alt="10M">
+                    <img src="/TelitFN990A40/graph/stable(10).png" alt="10M">
                     <figcaption class="caption">Graph #1: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/stable(100).png" alt="100M">
+                    <img src="/TelitFN990A40/graph/stable(100).png" alt="100M">
                     <figcaption class="caption">Graph #2: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/stable(115).png" alt="115M">
+                    <img src="/TelitFN990A40/graph/stable(115).png" alt="115M">
                     <figcaption class="caption">Graph #3: 115M</figcaption>
                 </figure>
             </div>
@@ -129,43 +129,43 @@ sudo qmi-network "$device" stop
         <div class="slides">
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(5).png" alt="5M">
+                    <img src="/TelitFN990A40/graph/mobile(5).png" alt="5M">
                     <figcaption class="caption">Graph #1: 5M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(10).png" alt="10M">
+                    <img src="/TelitFN990A40/graph/mobile(10).png" alt="10M">
                     <figcaption class="caption">Graph #2: 10M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(20).png" alt="20M">
+                    <img src="/TelitFN990A40/graph/mobile(20).png" alt="20M">
                     <figcaption class="caption">Graph #3: 20M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(50).png" alt="50M">
+                    <img src="/TelitFN990A40/graph/mobile(50).png" alt="50M">
                     <figcaption class="caption">Graph #4: 50M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(75).png" alt="75M">
+                    <img src="/TelitFN990A40/graph/mobile(75).png" alt="75M">
                     <figcaption class="caption">Graph #5: 75M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(100).png" alt="100M">
+                    <img src="/TelitFN990A40/graph/mobile(100).png" alt="100M">
                     <figcaption class="caption">Graph #6: 100M</figcaption>
                 </figure>
             </div>
             <div class="slide">
                 <figure>
-                    <img src="/Telit5G/graph/mobile(115).png" alt="115M">
+                    <img src="/TelitFN990A40/graph/mobile(115).png" alt="115M">
                     <figcaption class="caption">Graph #7: 115M</figcaption>
                 </figure>
             </div>
